--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,9 @@ __pycache__/
 # Ignore compiled linux libs in the root folder, e.g. librust_g.so
 /*.so
 
+# Tracy profiler DLL
+prof.dll
+
 # Build tools cache
 /tools/**/.cache
 
